Bug 272098 - JJ: Add "ctrl+w" close tab shortcut to chatwindow
Summary: JJ: Add "ctrl+w" close tab shortcut to chatwindow
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2011-04-30 22:47 UTC by Francesco Nwokeka
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco Nwokeka 2011-04-30 22:47:08 UTC
Version:           git-latest (using KDE 4.6.2) 
OS:                Linux

Chatwindows don't have the default shortcut for closing tabs

Reproducible: Didn't try
Comment 1 David Edmundson 2011-05-13 14:01:12 UTC
Git commit 17457964c00fc79a72bc7feb8679df254d719680 by David Edmundson, on behalf of Tarun Mall.
Committed on 13/05/2011 at 14:00.
Pushed by davidedmundson into branch 'master'.

Ability to close a tab using the standard key combination

REVIEW: 101352
BUG: 272098

M  +7    -0    app/chat-window.cpp     
M  +1    -0    app/chat-window.h     

http://commits.kde.org/telepathy-chat-handler/17457964c00fc79a72bc7feb8679df254d719680