Ability to close a tab using the standard key combination

REVIEW: 101352
BUG: 272098